[tool.poetry]
name = "content_backend"
version = "0.1.0"
description = "APIs for content"
authors = ["Eric Rea <eric@cookbookwp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "4.0.1"
cryptography = "42.0.4"
fastapi = "0.104.0"
psycopg2-binary = "2.9.6"
PyMySQL = "1.0.3"
python-jose = "3.3.0"
python-multipart = "0.0.6"
SQLAlchemy = "1.4.47"
uvicorn = "0.23.2"
passlib = "1.7.4"
pytest = "7.4.2"
httpx = "0.25.0"
pytest-asyncio = "0.21.1"
aiofiles = "0.8.0"
jinja2 = "3.1.2"
importlib-metadata = "^8.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
