[tool.poetry]
name = "content_backend"
version = "0.1.0"
description = "APIs for content"
authors = ["Eric Rea <eric@cookbookwp.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.0"
psycopg2-binary = "2.9.6"
SQLAlchemy = "1.4.47"
uvicorn = "0.23.2"
pytest = "7.4.2"
httpx = "0.25.0"
pytest-asyncio = "0.21.1"
aiofiles = "0.8.0"
jinja2 = "3.1.2"
python-multipart = "0.0.6"
importlib-metadata = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
